# nostd_browser

./: Cargo.toml  readme.md
device/: Cargo.toml
device/src/: common.rs  lib.rs  tdeck.rs
gui/: Cargo.toml
gui/src/: comps.rs  lib.rs
src/: brickbreaker.rs  browser.rs  common.rs  comps.rs  form_layout.rs  gui.rs  lib.rs  menuview.rs  page.rs  pageview.rs  tagparser.rs  tdeck.rs  textview.rs  toggle_button.rs  toggle_group.rs
src/gui/: comps.rs  mod.rs
