[package]
edition = "2021"
name    = "nostd_browser"
version = "0.1.0"

[[bin]]
name = "nostd_browser"
path = "./src/bin/main.rs"

[dependencies]
nostd_html_parser = {path = "../nostd_html_parser"}
log = "0.4.27"

esp-bootloader-esp-idf = "0.1.0"
esp-alloc = "0.8.0"
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32s3",
  "log-04",
  "unstable",
] }
esp-println = { version = "0.14.0", features = ["esp32s3", "log-04"] }


embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns"
] }
embassy-sync = {  version = "0.7.0", features = ["log"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-65536",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
embedded-hal-bus = "0.3.0"
embedded-graphics = "0.8.1"
esp-hal-embassy = { version = "0.8.1", features = ["esp32s3", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "wifi",
] }
mipidsi = "0.9.0"
reqwless = { version = "0.13.0", default-features = false, features = [
  "embedded-tls",
  "alloc"
] }
hashbrown = "0.15.4"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  "dns-max-server-count-4"
] }
static_cell = { version = "2.1.1", features = ["nightly"] }
gt911 = "0.3.0"
gui2 = {path="../gui2"}
heapless = "0.8.0"
env_logger = {  version =  "0.11.8", optional = true }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[features]
std = ["env_logger"]
